test/errors/class_in_function.correct
error: class_in_function.li:2:11: class 'FunctionClass' must be declared at global scope
│ class FunctionClass {
│ ~~~~~~~~~~~~~~~~~~~~~
│       ^
